--- a/css/team.css
+++ b/css/team.css
@@ -6,6 +6,10 @@
 body {
     margin: 0;
     padding: 0;
+    background-image: linear-gradient(120deg, #7437E6, #0DD4FC);
+    background-size: 400% 400%;
+    -webkit-animation: gradientBG 10s ease infinite;
+    animation: gradientBG 8s ease infinite;
 }
 
 .container {
@@ -18,7 +22,7 @@ body {
 .team {
     min-height: 100vh;
     padding: 60px 15px;
-    background-color: #22252a;
+    /* background-color: #22252a; */
     float: left;
     width: 100%;
 }
@@ -42,6 +46,7 @@ body {
 .team .card .box {
     padding: 15px;
     background-color: #2d3035;
+    background-color: #0082e6;
     border-radius: 5px;
     transition: transform 0.5s ease, box-shadow 0.8s ease;
 }
@@ -96,5 +101,29 @@ body {
 @media(max-width:550px) {
     .team .card {
         width: 100%;
+    }
+}
+
+@-webkit-keyframes gradientBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@keyframes gradientBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
     }
 }
