changed color scheme

--- a/css/loginCSS.css
+++ b/css/loginCSS.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(120deg, #7437E6, #0DD4FC);
+    background-image: linear-gradient(120deg, #7437E6, #632AF5);
     background-size: 400% 400%;
     -webkit-animation: gradientBG 10s ease infinite;
     animation: gradientBG 8s ease infinite;
