--- a/css/team.css
+++ b/css/team.css
@@ -6,7 +6,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: linear-gradient(120deg, #7437E6, #0DD4FC);
+    background-image: linear-gradient(120deg, #7437E6, #632AF5);
     background-size: 400% 400%;
     -webkit-animation: gradientBG 10s ease infinite;
     animation: gradientBG 8s ease infinite;
@@ -67,7 +67,7 @@ body {
     font-size: 20px;
     font-family: 'open sans';
     margin: 20px 0 10px;
-    color: #ea5e71;
+    color: #ffffff;
     text-align: center;
     font-weight: 700;
 }
