--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,10 @@ a:hover {
 body {
     margin: 0;
     padding: 0;
+    background-image: linear-gradient(120deg, #7437E6, #844ee9);
+    background-size: 400% 400%;
+    -webkit-animation: gradientBG 10s ease infinite;
+    animation: gradientBG 8s ease infinite;
 }
 
 body::-webkit-scrollbar {
@@ -132,4 +136,28 @@ main {
 h1 {
     margin: 1em 0;
     padding-left: 0 10;
+}
+
+@-webkit-keyframes gradientBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@keyframes gradientBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
