--- a/css/event.css
+++ b/css/event.css
@@ -1,55 +1,98 @@
-.header {
-    margin: 10px 0;
-    /* border: 1px solid red; */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+main {
+    margin-top: 20px;
 }
 
-.header h1 {
-    margin: 0.7rem;
-    padding: 0;
-    display: inline-block;
-    text-align: left;
-    height: 50px;
-    /* float: left; */
+h3 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 15px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+}
+
+a {
+    font-size: 14px;
+    margin: 15px 0;
 }
 
 form {
-    display: inline;
+    font-size: 15px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
 }
 
-.header form input[type=text] {
-    float: right;
-    border: 1px solid gray;
-    background: #f1f1f1;
-    border-radius: 10px;
-    padding: 6px;
-    line-height: 35px;
-    width: 500px;
-    margin: 13px 0;
-    font-size: 20px;
+input {
+    margin-bottom: 10px;
 }
 
-.header form input[type=text]:focus {
-    border: 3px blue;
+input[type=text] {
+    font-size: 15px;
+    width: 100%;
 }
 
-.header form input[type=text]::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-{}
-
-.event-container {
-    padding: 20px;
-    margin: 0.25rem 0;
-    background-color: white;
-    border: 3px solid grey;
+input[type=submit] {
     border-radius: 20px;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    padding: 5px 20px;
+    letter-spacing: 1px;
+    font-size: 12px;
+    font-weight: bold;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
-.event-description {
-    position: relative;
-    /* border: 3px solid red; */
+input[type=number] {
+    width: 45px;
+    height: 30px;
+    font-size: 15px;
+}
+
+td {
+    width: 10%;
+    text-align: right;
+}
+
+button {
+    margin-left: 30%;
+    margin-right: 30%;
+    font-size: 14px;
+    border-radius: 20px;
+    padding: 3px;
+}
+
+#Name {
+    width: 85%;
+    text-align: center;
+}
+
+#editing {
+    font-color: darkblue;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.container {
+    border-radius: 20px;
+    padding: 15px;
+    background-color: #fff;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
+}
+
+#list {
+    margin-bottom: 40px;
+}
+
+#create {
+    float: left;
+    width: 50%;
+}
+
+#edit {
+    margin-left: 52%;
 }
