--- a/css/eventDetails.css
+++ b/css/eventDetails.css
@@ -13,6 +13,25 @@
     /* float: left; */
 }
 
+.header a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+    border-radius: 8px;
+    text-align: center;
+    margin: 20px 0;
+}
+
+.header a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.back-btn {
+    background-color: #f1f1f1;
+    color: black;
+}
+
 form {
     display: inline;
 }
@@ -30,7 +49,9 @@ form {
 }
 
 .header form input[type=text]:focus {
-    border: 3px blue;
+    border: 1px solid gray;
+    border-radius: 10px;
+    outline: none;
 }
 
 .header form input[type=text]::after {
