--- a/css/signup.css
+++ b/css/signup.css
@@ -3,16 +3,27 @@
     box-sizing: border-box;
 }
 
-h1 {
+.specialDropdown {
+    width: 70%;
+}
+
+body {
+    background: url(../img/1.andrew-neel-1-29wyvvLJA-unsplash.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+}
+
+main h1 {
     font-weight: bold;
     margin: 0;
 }
 
-h2 {
+main h2 {
     text-align: center;
 }
 
-p {
+main p {
     font-size: 14px;
     font-weight: 100;
     line-height: 20px;
@@ -20,14 +31,14 @@ p {
     margin: 20px 0 30px;
 }
 
-a {
+main a {
     color: #333;
     font-size: 14px;
     text-decoration: none;
     margin: 15px 0;
 }
 
-button {
+main button {
     border-radius: 20px;
     border: 1px solid #FF4B2B;
     background-color: #2691d9;
@@ -41,20 +52,20 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+main button:hover {
     border-color: #2691d9;
     transition: .5s;
 }
 
-button:active {
+main button:active {
     transform: scale(0.95);
 }
 
-button:focus {
+main button:focus {
     outline: none;
 }
 
-button.ghost {
+main button.ghost {
     background-color: transparent;
     border-color: #FFFFFF;
 }
@@ -78,7 +89,7 @@ input {
     width: 100%;
 }
 
-.container {
+.container-signup {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -105,7 +116,7 @@ input {
     z-index: 2;
 }
 
-.container.right-panel-active .sign-in-container {
+.container-signup.right-panel-active .sign-in-container {
     transform: translateX(100%);
 }
 
@@ -116,7 +127,7 @@ input {
     z-index: 1;
 }
 
-.container.right-panel-active .sign-up-container {
+.container-signup.right-panel-active .sign-up-container {
     transform: translateX(100%);
     opacity: 1;
     z-index: 5;
@@ -147,14 +158,15 @@ input {
     z-index: 100;
 }
 
-.container.right-panel-active .overlay-container {
+.container-signup.right-panel-active .overlay-container {
     transform: translateX(-100%);
 }
 
 .overlay {
-    background: #2691d9;
-    background: -webkit-linear-gradient(to bottom right, #7437E6, #2691d9);
-    background: linear-gradient(to bottom right, #2691d9, #7437E6);
+    /*background: #2691d9;
+     background: -webkit-linear-gradient(to bottom right, #7437E6, #2691d9);
+    background: linear-gradient(to bottom right, #2691d9, #7437E6); */
+    background: rgba(0, 0, 0, 0.5);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
@@ -167,7 +179,7 @@ input {
     transition: transform 0.6s ease-in-out;
 }
 
-.container.right-panel-active .overlay {
+.container-signup.right-panel-active .overlay {
     transform: translateX(50%);
 }
 
@@ -187,7 +199,7 @@ input {
 }
 
 .overlay-left {
-    transform: translateX(-20%);
+    transform: translateX(0);
 }
 
 .container.right-panel-active .overlay-left {
@@ -199,8 +211,14 @@ input {
     transform: translateX(0);
 }
 
-.container.right-panel-active .overlay-right {
+.container-signup.right-panel-active .overlay-right {
     transform: translateX(20%);
+}
+
+@media(min-width:768px) {
+    .navbar {
+        background: transparent !important;
+    }
 }
 
 @-webkit-keyframes gradientBG {
